--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,6 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     
-    - name: Install Dependencie
+    - name: Install Dependencies
      run: pip install resemble
      
