--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,8 +11,8 @@ on:
 
 jobs:
   my_job:
-  name: Run-npm-on-Ubuntu
-    runs-on: ubuntu-22.04
+    name: Run-npm-on-Ubuntu
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [22.x]
@@ -30,5 +30,4 @@ jobs:
     - run: npm test
     
     - name: Install Dependencies
-     run: pip install resemble
-     
+      run: pip install resemble
