--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,15 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build --if-present
+    - name: Setup Conan
+  # You may pin to the exact commit or the version.
+  # uses: jwidauer/setup-conan@37b9cc7ed87bdd5a6f48221536689741496ab84d
+    uses: jwidauer/setup-conan@v1
+     with:
+    # Conan version to use
+    version: # optional, default is 
+    # Git repository to use when installing the Conan configuration
+    config-git-repository: # optional, default is     
     - run: npm test
     
     - name: Install Dependencies
